build: 修改构建脚本以生成dist目录并复制文件
更新package.json中的build脚本，使其创建dist目录并将所有文件复制到该目录中，为静态站点提供正确的构建输出结构

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Norland 游戏参数编辑器",
   "scripts": {
-    "build": "echo 'Static site - no build required'",
+    "build": "mkdir -p dist && cp -r * dist/",
     "preview": "echo 'Static site - no preview required'"
   },
   "keywords": ["norland", "game", "config", "editor"],
